# Accessing_Pixel_Values

./: CMakeLists.txt  main.cpp
